<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MenuActivity"
        android:background="@drawable/background">

    <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/dp250"
            android:layout_height="@dimen/dp250"
            app:lottie_rawRes="@raw/parrot"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp50"
    />

    <Button
            android:id="@+id/btnStudy"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp50"
            android:background="@drawable/rounded_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp15"
            android:text="@string/study"
            android:fontFamily="@font/dilo_world"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_above="@id/btnPlay"
    />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp50"
        android:background="@drawable/rounded_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp15"
        android:text="@string/play"
        android:fontFamily="@font/dilo_world"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_above="@id/btnLeaderboard"
    />

    <Button
        android:id="@+id/btnLeaderboard"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp50"
        android:background="@drawable/rounded_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp15"
        android:text="@string/leaderboard"
        android:fontFamily="@font/dilo_world"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_above="@+id/btnExit"
    />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp50"
        android:background="@drawable/rounded_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp50"
        android:text="@string/exit"
        android:fontFamily="@font/dilo_world"
        android:textColor="@color/white"
        android:textSize="20sp"
    />

</RelativeLayout>