<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp25"
            android:elevation="@dimen/dp25"
            android:layout_marginStart="@dimen/dp25"
            android:layout_marginEnd="@dimen/dp25">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_level_you_want_to_play"
                android:fontFamily="@font/dilo_world"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:layout_marginEnd="@dimen/dp25"
                android:layout_marginStart="@dimen/dp25"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/dp25"
                android:layout_marginStart="@dimen/dp25"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@android:color/darker_gray"/>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/dp150"
                android:layout_height="@dimen/dp150"
                app:lottie_rawRes="@raw/turkey"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_gravity="center_horizontal"
            />

            <Button
                android:id="@+id/btnLevel01"
                android:layout_width="@dimen/dp200"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="@string/level_01"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="@dimen/dp40"
                android:fontFamily="@font/dilo_world"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/btnLevel02"
                android:layout_width="@dimen/dp200"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="@string/level_02"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="@dimen/dp20"
                android:fontFamily="@font/dilo_world"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/btnLevel03"
                android:layout_width="@dimen/dp200"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="@string/level_03"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="@dimen/dp20"
                android:fontFamily="@font/dilo_world"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/btnDismiss"
                android:layout_width="@dimen/dp200"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="@dimen/dp20"
                android:fontFamily="@font/dilo_world"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>