<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp25"
            app:cardElevation="@dimen/dp25"
            android:layout_marginStart="@dimen/dp25"
            android:layout_marginEnd="@dimen/dp25">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp20">

            <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp150"
                    app:lottie_rawRes="@raw/fireworks"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp20"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_over"
                    android:textAllCaps="false"
                    android:textSize="28sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/dp15"
                    android:fontFamily="@font/dilo_world"
                    android:layout_gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/txtScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_over"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/dp15"
                    android:fontFamily="@font/dilo_world"
                    android:layout_gravity="center_horizontal"/>

            <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginEnd="@dimen/dp25"
                    android:layout_marginStart="@dimen/dp25"
                    android:layout_marginTop="@dimen/dp15"
                    tools:text="@string/app_name"
                    android:fontFamily="@font/dilo_world"
                    android:textSize="14sp"
                    android:paddingHorizontal="@dimen/dp15"/>

            <Button
                    android:id="@+id/btnBackToMenu"
                    android:layout_width="@dimen/dp200"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:text="@string/back_to_menu"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:background="@drawable/rounded_button"
                    android:layout_marginTop="@dimen/dp25"
                    android:fontFamily="@font/dilo_world"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dp20"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>